; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/MAC/extr_fman_tgec.c_fman_tgec_enable_interrupt.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/MAC/extr_fman_tgec.c_fman_tgec_enable_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tgec_regs = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fman_tgec_enable_interrupt(%struct.tgec_regs* %0, i32 %1) #0 {
  %3 = alloca %struct.tgec_regs*, align 8
  %4 = alloca i32, align 4
  store %struct.tgec_regs* %0, %struct.tgec_regs** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.tgec_regs*, %struct.tgec_regs** %3, align 8
  %6 = getelementptr inbounds %struct.tgec_regs, %struct.tgec_regs* %5, i32 0, i32 0
  %7 = call i32 @ioread32be(i32* %6)
  %8 = load i32, i32* %4, align 4
  %9 = or i32 %7, %8
  %10 = load %struct.tgec_regs*, %struct.tgec_regs** %3, align 8
  %11 = getelementptr inbounds %struct.tgec_regs, %struct.tgec_regs* %10, i32 0, i32 0
  %12 = call i32 @iowrite32be(i32 %9, i32* %11)
  ret void
}

declare dso_local i32 @iowrite32be(i32, i32*) #1

declare dso_local i32 @ioread32be(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
